src/objects/Open311ServiceConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Open311 endpoint settings for service discovery</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open311ProductionURL__c</fullName>
        <label>Open 311 Production URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open311TestURL__c</fullName>
        <label>Open 311 Test URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseFormats__c</fullName>
        <label>Response Formats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Phone__c</fullName>
        <label>Support Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Open311 Service Config</label>
</CustomObject>